--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,9 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+body {
+	background-color:#B3D4FC;
+}
 
 
 
