--- a/css/fs.css
+++ b/css/fs.css
@@ -1,5 +1,6 @@
 body { 
 	margin: 40px;
+	@grid-gutter-width: 0px;
 }
 .nav .container {
 	padding-top: 10px;
@@ -17,8 +18,12 @@ body {
 
 .jumbotron {
 	background-color: #666666;
-	background-image: url('#');
+	background-image: url('../images/test.png');
 	height: 500px;
+	margin-left:0px;
+	margin-right:0px;
+	padding-left:0px;
+	padding-right:0px;
 }
 .jumbotron .container {
 	position: relative;
@@ -32,6 +37,22 @@ body {
 	text-transform: uppercase;
 	font-weight; bold;
 }
+
+.vertical-center {
+  height:100%;
+  width:100%;
+
+  text-align: center;  /* align the inline(-block) elements horizontally */
+  font: 0/0 a;         /* remove the gap between inline(-block) elements */
+}
+
+.vertical-center:before {    /* create a full-height inline block pseudo=element */
+  content: ' ';
+  display: inline-block;
+  vertical-align: middle;  /* vertical alignment of the inline element */
+  height: 100%;
+}
+
 .row h2{
 	text-transform: uppercase;
 	padding-left: 30px;
@@ -44,4 +65,8 @@ body {
 }
 .contact-form{
 	margin-top: 60px;
+}
+
+.no-gutter {
+	@grid-gutter-width: 0px;
 }
