--- a/css/fs.css
+++ b/css/fs.css
@@ -1,7 +1,10 @@
 body { 
-	margin: 40px;
 	@grid-gutter-width: 0px;
 }
+.nav {
+	margin-bottom: 0px;
+}
+
 .nav .container {
 	padding-top: 10px;
 }
@@ -19,13 +22,15 @@ body {
 .jumbotron {
 	background-color: #666666;
 	background-image: url('imag/test.png');
-	height: 700px;
-	margin-left:0px;
-	margin-right:0px;
+	height: 600px;
+	padding:0px;
+	margin-top:0px;
+	margin-bottom:0px;
 }
+
 .jumbotron .container {
 	position: relative;
-	top: 100px;
+	
 }
 .jumbotron h1 {
 	color: #B3D4FC;
@@ -36,20 +41,6 @@ body {
 	font-weight; bold;
 }
 
-.vertical-center {
-  height:100%;
-  width:100%;
-
-  text-align: center;  /* align the inline(-block) elements horizontally */
-  font: 0/0 a;         /* remove the gap between inline(-block) elements */
-}
-
-.vertical-center:before {    /* create a full-height inline block pseudo=element */
-  content: ' ';
-  display: inline-block;
-  vertical-align: middle;  /* vertical alignment of the inline element */
-  height: 100%;
-}
 
 .row h2{
 	text-transform: uppercase;
@@ -67,4 +58,15 @@ body {
 
 .no-gutter {
 	@grid-gutter-width: 0px;
+}
+
+.col-hover:hover {
+	background-color:blue;
+	color:white;
+}
+
+#info {
+	background-color:#b47335;
+	color: #d1dcd6;
+	padding: 5%;
 }
