--- a/css/fs.css
+++ b/css/fs.css
@@ -1,8 +1,21 @@
 body { 
 	@grid-gutter-width: 0px;
+	background-color:#5A5A5A;
+	color:white;
 }
 .nav {
 	margin-bottom: 0px;
+	color:#D1DCD6;
+	padding:.5%;
+}
+
+.navbar-header .navbar-brand{
+	color:white;
+}
+
+.navbar-brand {
+	color:white;
+	font-size:20px;
 }
 
 .nav .container {
@@ -12,7 +25,7 @@ body {
 	padding: 20px 10px;
 	font-size: 11px;
 	font-weight: bold;
-	color: #5a5a5a;
+	color: white;
 	text-transform: uppercase;
 }
 .nav li {
@@ -33,10 +46,11 @@ body {
 	
 }
 .jumbotron h1 {
-	color: #B3D4FC;
+	color: #D1DCD6;
+	text-transform: uppercase;
 }
 .jumbotron p {
-	color: #B3D4FC;
+	color: #D1DCD6;
 	text-transform: uppercase;
 	font-weight; bold;
 }
